phys5v48hw/hw5/hw5SerialOut.txt
nbodySerial.cc: In function 'int main(int, char**)':
nbodySerial.cc:158:14: error: 'std::basic_ostream<_CharT, _Traits>::basic_ostream() [with _CharT = char; _Traits = std::char_traits<char>]' is protected within this context
  158 | std::ostream fileOut;
      |              ^~~~~~~
In file included from /opt/ohpc/pub/compiler/gcc/12.4.0/include/c++/12.4.0/iostream:39,
                 from nbodySerial.cc:1:
/opt/ohpc/pub/compiler/gcc/12.4.0/include/c++/12.4.0/ostream:384:7: note: declared protected here
  384 |       basic_ostream()
      |       ^~~~~~~~~~~~~
nbodySerial.cc:159:9: error: 'std::ostream' {aka 'class std::basic_ostream<char>'} has no member named 'open'
  159 | fileOut.open(fNameOut, std::ios::out | std::ios::app);
      |         ^~~~
nbodySerial.cc:161:9: error: 'std::ostream' {aka 'class std::basic_ostream<char>'} has no member named 'close'
  161 | fileOut.close();
      |         ^~~~~
Total Kinetic Energy = [0, 1.17784, 60.9191, 287.405, 501.383, 876.06, 1649.88, 2162.73, 2964.93, 4052.24, 5897.06, 7604.24, 11574.6, 18537.8, 33622.3, 32590.2, 21438.1, 14571.1, 10946.9, 9412.03, 9234.29, 9108.22, 9442.52, 10723.1, 10405.9, 10820, 10494.6, 10047.3, 9129.02, 9041.18, 9395.94, 9659.17, 10348.6, 9058.56, 9085.06, 9234.39, 9127.81, 9242.33, 9579.16, 10778.1, 10361.2, 9605.16, 8615.55, 8897.09, 8567.35, 7662.61, 7602.02, 8139.36, 9260.44, 9538.15, 10384.9]
Runtime = 0.027 s for N = 128

real	0m0.039s
user	0m0.025s
sys	0m0.000s
Total Kinetic Energy = [0, 11.2681, 534.101, 1770.58, 3849.3, 7348.44, 12999.6, 21899.4, 39835.8, 80353.8, 150013, 87282.6, 56840.7, 45741.7, 40283.8, 42865.2, 41447, 38233.9, 35490, 37149.4, 38682.8, 38925.9, 38535.1, 36609.8, 35993.9, 36607.4, 40358.4, 34757.9, 31661, 30725.1, 30287, 32291.1, 35810.7, 35177.6, 31352.5, 30631.7, 35405.3, 36848.2, 32920.2, 30499.2, 30730.9, 33392.1, 33537.1, 31255, 32409.6, 31487.1, 32558.8, 32457.4, 29735.5, 28030.9, 29250.5]
Runtime = 0.089 s for N = 256

real	0m0.093s
user	0m0.087s
sys	0m0.002s
Total Kinetic Energy = [0, 74.0243, 3810.32, 13493.5, 32450.9, 71248.2, 173739, 711817, 309916, 210489, 190867, 170743, 167254, 161648, 166721, 159379, 170379, 157153, 143120, 155415, 149844, 152788, 146805, 143520, 139256, 138527, 138884, 141925, 128916, 135029, 137107, 133382, 125324, 123327, 128939, 129647, 123994, 131936, 134077, 131557, 128801, 129981, 125504, 123521, 127517, 126103, 122140, 117095, 115409, 121870, 121182]
Runtime = 0.343 s for N = 512

real	0m0.346s
user	0m0.338s
sys	0m0.003s
Total Kinetic Energy = [0, 544.9, 28661.8, 115840, 370128, 2.64298e+06, 1.18149e+06, 881818, 776738, 739254, 717979, 720563, 685457, 674666, 647227, 634790, 624888, 626160, 630733, 614024, 588206, 620945, 581111, 581552, 575969, 577674, 589726, 584196, 579027, 558992, 554567, 579942, 542336, 549838, 574084, 567256, 542092, 515925, 514788, 540810, 533686, 544610, 550221, 521549, 519518, 512915, 530111, 514622, 516756, 525706, 494813]
Runtime = 1.36 s for N = 1024

real	0m1.364s
user	0m1.346s
sys	0m0.010s
Total Kinetic Energy = [0, 4363.19, 243936, 1.40717e+06, 8.33829e+06, 3.36114e+06, 2.82788e+06, 2.64559e+06, 2.67501e+06, 2.4836e+06, 2.50809e+06, 2.53664e+06, 2.39417e+06, 2.35026e+06, 2.40361e+06, 2.4202e+06, 2.29868e+06, 2.3317e+06, 2.2744e+06, 2.2997e+06, 2.36353e+06, 2.34655e+06, 2.28629e+06, 2.24875e+06, 2.18176e+06, 2.15182e+06, 2.18926e+06, 2.19425e+06, 2.15352e+06, 2.11213e+06, 2.13456e+06, 2.15571e+06, 2.20266e+06, 2.1512e+06, 2.09686e+06, 2.06558e+06, 2.13701e+06, 2.1113e+06, 2.08983e+06, 2.11584e+06, 2.16217e+06, 2.179e+06, 2.11238e+06, 2.08821e+06, 2.09148e+06, 2.09267e+06, 2.04667e+06, 2.03226e+06, 2.01682e+06, 2.01157e+06, 2.07256e+06]
Runtime = 5.403 s for N = 2048

real	0m5.408s
user	0m5.375s
sys	0m0.015s
Total Kinetic Energy = [0, 33411.1, 2.23278e+06, 4.15904e+07, 1.58867e+07, 1.41339e+07, 1.32641e+07, 1.30301e+07, 1.26421e+07, 1.2412e+07, 1.25119e+07, 1.23541e+07, 1.20953e+07, 1.20287e+07, 1.20339e+07, 1.20625e+07, 1.19829e+07, 1.19453e+07, 1.18068e+07, 1.17658e+07, 1.17767e+07, 1.16221e+07, 1.17058e+07, 1.16661e+07, 1.15841e+07, 1.15632e+07, 1.15452e+07, 1.14659e+07, 1.14749e+07, 1.14039e+07, 1.14743e+07, 1.14299e+07, 1.14114e+07, 1.1378e+07, 1.12652e+07, 1.14075e+07, 1.13713e+07, 1.12779e+07, 1.13096e+07, 1.1262e+07, 1.12506e+07, 1.11629e+07, 1.12409e+07, 1.12748e+07, 1.12032e+07, 1.11548e+07, 1.12598e+07, 1.11915e+07, 1.10631e+07, 1.11047e+07, 1.10791e+07]
Runtime = 21.571 s for N = 4096

real	0m21.578s
user	0m21.498s
sys	0m0.022s
